fix accessibility contrast

--- a/games/css/crosswords2.css
+++ b/games/css/crosswords2.css
@@ -378,7 +378,8 @@ article {
       font-size: 1rem;
       position: absolute;
       line-height: 4;
-      color: #000;
+      color: #000 !important;
+      background: #fff;
       width: 1px;
       height: 1px;
       overflow: clip;
